--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_fonts: ^6.1.0
   intl: ^0.19.0
   day_picker: ^2.2.0
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
