--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,13 +42,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   tuple: ^2.0.2
   provider: ^6.1.1
-  carousel_slider: ^4.2.1
   carousel_calendar: ^0.0.2
   google_fonts: ^6.1.0
   intl: ^0.19.0
   day_picker: ^2.2.0
   get_it: ^7.7.0
   signals: ^5.2.1
+  go_router: ^14.2.1
+  carousel_slider_plus: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
