--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
 
   firebase_core:
   cloud_firestore:
+  firebase_auth:
+  google_sign_in:
+  sign_in_with_apple:
   flutter_spinkit: ^5.2.0
 
   flutter:
