--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   signals: ^5.2.1
   go_router: ^14.2.1
   carousel_slider_plus: ^6.0.0
+  mockito: ^5.4.4
 
 dev_dependencies:
   flutter_test:
